ames/pds_web/test-data/volumes/bad/document/ads.lbl
PDS_VERSION_ID                     = PDS3                                     
RECORD_TYPE                        = "STREAM"                                 
DATA_SET_ID                        = "EAR-A-EMMI-3-FORNASIER-V1.0"            
                                                                              
^DOCUMENT                          = "ads.txt"                                
                                                                              
OBJECT                             = DOCUMENT                                 
   DOCUMENT_NAME                   = "ADS SUBMISSION FILE"                    
   PUBLICATION_DATE                = 2008-07-23                               
   DOCUMENT_TOPIC_TYPE             = "BIBLIOGRAPHIC INFORMATION"              
   INTERCHANGE_FORMAT              = "ASCII"                                  
   DOCUMENT_FORMAT                 = "TEXT"                                   
   DESCRIPTION                     = "This document is sent to Astrophysics   
        Data System to list this data set and its products in their service." 
END_OBJECT                         = DOCUMENT                                 
END                                                                           
